アプリタイトル修正

--- a/app/assets/stylesheets/_keyboard.scss
+++ b/app/assets/stylesheets/_keyboard.scss
@@ -2,6 +2,8 @@
   background-color: #3093AE;
   line-height: 60px;
   width: 100%;
+  color: white;
+  font-weight: bold;
 }
 .contents{
   .functions{
